# c-plus-product-register-flask

./: .env  .gitignore  pyproject.toml  readme.md
src/: App.py
src/ORM/: FDB_handler.py
src/models/: product.py
src/models/firebird/: product.py
src/models/sqlite/: update.py  user.py
src/resources/: authentication.py  products.py  stock.py  update.py  user.py
